# mingwdeployqt

./: CMakeLists.txt  README.md  main.cpp  mingwdeployqt.rc
.github/workflows/: windows.yml
